NetInfo: Return HTTP layer metrics instead of transport layer

BUG=733881

Review-Url: https://codereview.chromium.org/2941713002
Cr-Commit-Position: refs/heads/master@{#480319}

Former-commit-id: 75451111c9feeebc1a8b4d7a9a407013ca981fb5